--- a/index.html
+++ b/index.html
@@ -1,237 +1,190 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Denis Flueraru — Portfolio</title>
-<style>
-  :root{
-    --bg: #ffffff;
-    --grid-line: #e6e6e6;
-    --olive: #717b3b;
-    --khaki: #b2b07a;
-    --grey: #6b6b6b;
-    --black: #111111;
-    --orange: #d66a2b;
-    --fluoro: #9cff4d;
-    --grid-cell: 140px;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Denis Flueraru</title>
+  <style>
+    /* Reset default margins */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-  *{box-sizing:border-box;}
-  body{
-    margin:0;
-    font-family:"Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    background: var(--bg);
-    color: var(--black);
-    display:flex;
-    justify-content:center;
-    overflow-x:hidden;
-  }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: white;
+      overflow-x: hidden;
+    }
 
-  .wrap{
-    width:100vw;
-    height:100vh;
-    display:grid;
-    grid-template-columns: 1fr 360px;
-    gap:28px;
-  }
+    /* Header */
+    .header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: white;
+      z-index: 100;
+      border-bottom: 1px solid #eee;
+    }
 
-  .left{
-    position:relative;
-    padding:36px;
-    min-height:100vh;
-    background:
-      linear-gradient(to right, var(--grid-line) 2px, transparent 2px),
-      linear-gradient(to bottom, var(--grid-line) 2px, transparent 2px);
-    background-size: var(--grid-cell) var(--grid-cell);
-    overflow:hidden;
-  }
+    .header .logo {
+      font-weight: bold;
+      font-size: 20px;
+    }
 
-  .brand{
-    position:absolute;
-    top:18px;
-    left:18px;
-    font-weight:600;
-    letter-spacing:0.02em;
-    color:#111;
-    z-index:10;
-  }
-  .brand .name { font-size:18px; }
-  .brand .tag { font-size:12px; color:var(--grey); margin-top:6px; text-transform:lowercase; }
+    .header .menu-toggle {
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 18px;
+    }
 
-  .play-area{width:100%; height:100%; position:relative;}
+    /* Main content scroll */
+    .main-content {
+      display: flex;
+      justify-content: center;
+      padding-top: 100px; /* header space */
+      min-height: 100vh;
+    }
 
-  .quad{position:absolute;}
+    .scroll-container {
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      max-width: 800px;
+    }
 
-  .shape{
-    width:var(--grid-cell);
-    height:var(--grid-cell);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    border-radius:20px;
-    font-weight:700;
-    font-size:14px;
-    text-transform:uppercase;
-    letter-spacing:1px;
-    cursor:pointer;
-    user-select:none;
-    background: linear-gradient(145deg,#777,#555);
-    box-shadow: inset -3px -3px 6px #999, inset 3px 3px 6px #333;
-    transition: transform 300ms ease, box-shadow 300ms ease, background 300ms ease;
-    position:absolute;
-    color:#fff;
-    text-align:center;
-  }
+    .update {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
 
-  /* Colors */
-  .s-sound{background: linear-gradient(145deg,var(--olive), #556030);}
-  .s-inter{background: linear-gradient(145deg,var(--khaki), #9ea16b); color:#111;}
-  .s-install{background: linear-gradient(145deg,var(--grey), #4d4d4d);}
-  .s-proto{background: linear-gradient(145deg,var(--orange), #c05720);}
+    .update img {
+      max-width: 80%;
+      margin-bottom: 10px;
+      border-radius: 4px;
+    }
 
-  .shape:hover{
-    transform: scale(1.8);
-  }
-  .s-sound:hover{box-shadow:0 15px 30px var(--fluoro);}
-  .s-inter:hover{box-shadow:0 15px 30px var(--olive);}
-  .s-install:hover{box-shadow:0 15px 30px var(--orange);}
-  .s-proto:hover{box-shadow:0 15px 30px var(--khaki);}
+    .update p {
+      font-size: 16px;
+      line-height: 1.5;
+      color: #333;
+      max-width: 600px;
+    }
 
-  /* HUD overlay crosshairs */
-  .hud{
-    position:absolute;
-    top:0; left:0; width:100%; height:100%;
-    pointer-events:none;
-  }
-  .hud:after, .hud:before{
-    content:'';
-    position:absolute;
-    width:100%; height:100%;
-    background-image: linear-gradient(to right, rgba(0,0,0,0.05) 1px, transparent 1px),
-                      linear-gradient(to bottom, rgba(0,0,0,0.05) 1px, transparent 1px);
-    background-size: var(--grid-cell) var(--grid-cell);
-  }
+    /* Menu overlay */
+    .menu {
+      position: fixed;
+      top: 0;
+      right: -100%;
+      width: 60%;
+      height: 100%;
+      background-color: rgba(107, 142, 35, 0.9); /* Olive Drab overlay */
+      transition: right 0.4s ease;
+      z-index: 200;
+      padding: 50px 30px;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
 
-  .right{
-    padding:10px 6px;
-    display:flex;
-    flex-direction:column;
-    gap:12px;
-  }
-  .preview{
-    width:var(--grid-cell);
-    height:var(--grid-cell);
-    border-radius:8px;
-    overflow:hidden;
-    position:relative;
-    background:#222;
-    perspective:900px;
-  }
-  .preview .flip{
-    position:absolute;
-    inset:0;
-    display:block;
-    transform-style:preserve-3d;
-  }
-  .preview .img{
-    position:absolute;
-    inset:0;
-    background-size:cover;
-    background-position:center;
-    backface-visibility:hidden;
-  }
-  .preview .caption{
-    position:absolute;
-    left:5px; bottom:5px;
-    font-weight:700;
-    font-size:12px;
-    color:#fff;
-    text-shadow:0 1px 2px rgba(0,0,0,0.4);
-  }
+    .menu.open {
+      right: 0;
+    }
 
-  @media (max-width:920px){
-    .wrap{grid-template-columns:1fr;}
-    .right{order:2; flex-direction:row; gap:8px; overflow:auto;}
-    .preview{flex:0 0 var(--grid-cell); height:var(--grid-cell);}
-  }
-</style>
+    .menu h2 {
+      margin-bottom: 20px;
+    }
+
+    /* Optional menu items */
+    .menu a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+    }
+
+    /* Army color overlay when menu open */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(107, 142, 35, 0.3); /* semi-transparent olive drab */
+      display: none;
+      z-index: 150;
+    }
+
+    .overlay.active {
+      display: block;
+    }
+
+    @media (max-width: 768px) {
+      .menu {
+        width: 80%;
+      }
+    }
+  </style>
 </head>
 <body>
-<div class="wrap">
-  <div class="left">
-    <div class="brand">
-      <div class="name">Denis Flueraru</div>
-      <div class="tag">practice playing every field of life</div>
-    </div>
-    <div class="play-area">
-      <div class="hud"></div>
-      <div class="quad" style="left:40%; top:35%;">
-        <div class="shape s-sound">Sound</div>
+
+  <!-- Header -->
+  <div class="header">
+    <span class="logo">Denis Flueraru</span>
+    <span class="menu-toggle" onclick="toggleMenu()">Menu</span>
+  </div>
+
+  <!-- Overlay -->
+  <div class="overlay" id="overlay"></div>
+
+  <!-- Main content -->
+  <div class="main-content">
+    <div class="scroll-container" id="scroll-container">
+      <!-- Example updates -->
+      <div class="update">
+        <img src="https://via.placeholder.com/600x400" alt="Example Image 1">
+        <img src="https://via.placeholder.com/600x400" alt="Example Image 2">
+        <p>This week I completed a project on modern web design, exploring minimalist layouts and interactive menus.</p>
       </div>
-      <div class="quad" style="left:55%; top:35%;">
-        <div class="shape s-inter">Interactivity</div>
-      </div>
-      <div class="quad" style="left:40%; top:50%;">
-        <div class="shape s-install">Installations</div>
-      </div>
-      <div class="quad" style="left:55%; top:50%;">
-        <div class="shape s-proto">Prototyping</div>
+      <div class="update">
+        <img src="https://via.placeholder.com/600x400" alt="Example Image 3">
+        <p>Attended an inspiring workshop on color theory and its application in web interfaces.</p>
       </div>
     </div>
   </div>
 
-  <div class="right">
-    <div class="preview" data-key="sound"><div class="flip"></div><div class="caption">Sound</div></div>
-    <div class="preview" data-key="interactivity"><div class="flip"></div><div class="caption">Interactivity</div></div>
-    <div class="preview" data-key="installations"><div class="flip"></div><div class="caption">Installations</div></div>
-    <div class="preview" data-key="prototyping"><div class="flip"></div><div class="caption">Prototyping</div></div>
+  <!-- Menu -->
+  <div class="menu" id="menu">
+    <h2>Menu</h2>
+    <a href="#">About</a>
+    <a href="#">Projects</a>
+    <a href="#">Contact</a>
   </div>
-</div>
 
-<script>
-const IMAGES = {
-  sound: [
-    'https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?q=80&w=1200',
-    'https://images.unsplash.com/photo-1511376777868-611b54f68947?q=80&w=1200'
-  ],
-  interactivity:[
-    'https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=1200',
-    'https://images.unsplash.com/photo-1505238680356-667803448bb6?q=80&w=1200'
-  ],
-  installations:[
-    'https://images.unsplash.com/photo-1518733057094-95b53136d1a2?q=80&w=1200',
-    'https://images.unsplash.com/photo-1524499982521-1ffd58dd89ea?q=80&w=1200'
-  ],
-  prototyping:[
-    'https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1200',
-    'https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=1200'
-  ]
-};
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById('menu');
+      const overlay = document.getElementById('overlay');
+      const scrollContainer = document.getElementById('scroll-container');
 
-function initPreview(previewEl, images){
-  const flip = previewEl.querySelector('.flip');
-  const front=document.createElement('div'); front.className='img front';
-  const back=document.createElement('div'); back.className='img back';
-  flip.appendChild(front); flip.appendChild(back);
-  front.style.backgroundImage=`url('${images[0]}')`;
+      const isOpen = menu.classList.contains('open');
 
-  function cycle(){
-    const next=Math.floor(Math.random()*images.length);
-    back.style.backgroundImage=`url('${images[next]}')`;
-    back.style.opacity=0;
-    back.style.transition='opacity 600ms ease';
-    setTimeout(()=>{ back.style.opacity=1; const tmp=front.style.backgroundImage; front.style.backgroundImage=back.style.backgroundImage; back.style.backgroundImage=tmp; },100);
-    const delay=1000+Math.random()*1000;
-    setTimeout(()=>setTimeout(cycle,3000),delay);
-  }
-  setTimeout(cycle,1000);
-}
+      if (isOpen) {
+        menu.classList.remove('open');
+        overlay.classList.remove('active');
+      } else {
+        menu.classList.add('open');
+        overlay.classList.add('active');
+      }
+    }
+  </script>
 
-document.querySelectorAll('.preview').forEach(p=>{
-  const key=p.dataset.key;
-  if(IMAGES[key]) initPreview(p, IMAGES[key]);
-});
-</script>
 </body>
 </html>
