--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif;
       background-color: white;
       overflow-x: hidden;
     }
@@ -27,9 +27,8 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: white;
+      background: linear-gradient(to bottom, white 0%, rgba(255,255,255,0) 100%);
       z-index: 100;
-      border-bottom: 1px solid #eee;
     }
 
     .header .logo {
@@ -56,6 +55,9 @@
       flex-direction: column;
       gap: 50px;
       max-width: 800px;
+      scroll-behavior: smooth;
+      overflow-y: auto;
+      height: calc(100vh - 100px);
     }
 
     .update {
@@ -82,14 +84,14 @@
     .menu {
       position: fixed;
       top: 0;
-      right: -100%;
-      width: 60%;
+      right: -25%;
+      width: 25%;
       height: 100%;
-      background-color: rgba(107, 142, 35, 0.9); /* Olive Drab overlay */
+      background-color: #D2B48C; /* Tan */
+      color: black;
       transition: right 0.4s ease;
       z-index: 200;
-      padding: 50px 30px;
-      color: white;
+      padding: 50px 20px;
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -101,11 +103,11 @@
 
     .menu h2 {
       margin-bottom: 20px;
+      font-weight: normal;
     }
 
-    /* Optional menu items */
     .menu a {
-      color: white;
+      color: black;
       text-decoration: none;
       font-size: 18px;
     }
@@ -117,7 +119,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(107, 142, 35, 0.3); /* semi-transparent olive drab */
+      background-color: rgba(107, 142, 35, 0.2); /* semi-transparent olive drab */
       display: none;
       z-index: 150;
     }
@@ -128,7 +130,12 @@
 
     @media (max-width: 768px) {
       .menu {
-        width: 80%;
+        width: 50%;
+        right: -50%;
+      }
+
+      .menu.open {
+        right: 0;
       }
     }
   </style>
@@ -169,11 +176,11 @@
   </div>
 
   <script>
-    function toggleMenu() {
-      const menu = document.getElementById('menu');
-      const overlay = document.getElementById('overlay');
-      const scrollContainer = document.getElementById('scroll-container');
+    const menu = document.getElementById('menu');
+    const overlay = document.getElementById('overlay');
+    const scrollContainer = document.getElementById('scroll-container');
 
+    function toggleMenu() {
       const isOpen = menu.classList.contains('open');
 
       if (isOpen) {
@@ -184,6 +191,19 @@
         overlay.classList.add('active');
       }
     }
+
+    // Keyboard navigation for continuous scroll
+    document.addEventListener('keydown', function(e) {
+      const scrollAmount = 200; // pixels per press
+      if (e.key === 'ArrowDown') {
+        scrollContainer.scrollBy({ top: scrollAmount, behavior: 'smooth' });
+      } else if (e.key === 'ArrowUp') {
+        scrollContainer.scrollBy({ top: -scrollAmount, behavior: 'smooth' });
+      }
+    });
+
+    // Clicking overlay closes menu
+    overlay.addEventListener('click', toggleMenu);
   </script>
 
 </body>
