--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       position: fixed;
       top: 0;
       width: 100%;
-      padding: 20px 40px;
+      padding: 30px 50px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -33,31 +33,45 @@
 
     .header .logo {
       font-weight: bold;
-      font-size: 20px;
+      font-size: 28px; /* bigger header */
     }
 
     .header .menu-toggle {
       cursor: pointer;
       font-weight: bold;
-      font-size: 18px;
+      font-size: 22px; /* bigger menu text */
     }
 
     /* Main content scroll */
     .main-content {
       display: flex;
       justify-content: center;
-      padding-top: 100px; /* header space */
+      padding-top: 120px; /* header space */
       min-height: 100vh;
     }
 
     .scroll-container {
       display: flex;
       flex-direction: column;
-      gap: 50px;
-      max-width: 800px;
+      gap: 60px;
+      max-width: 900px;
       scroll-behavior: smooth;
       overflow-y: auto;
-      height: calc(100vh - 100px);
+      height: calc(100vh - 120px);
+      transition: transform 0.3s;
+    }
+
+    .scroll-container.mosh {
+      animation: mosh 0.3s infinite alternate;
+    }
+
+    @keyframes mosh {
+      0% { transform: translateX(0px) skewX(0deg); }
+      20% { transform: translateX(-3px) skewX(3deg); }
+      40% { transform: translateX(2px) skewX(-2deg); }
+      60% { transform: translateX(-1px) skewX(1deg); }
+      80% { transform: translateX(3px) skewX(-3deg); }
+      100% { transform: translateX(0px) skewX(0deg); }
     }
 
     .update {
@@ -74,10 +88,10 @@
     }
 
     .update p {
-      font-size: 16px;
-      line-height: 1.5;
+      font-size: 20px; /* bigger text */
+      line-height: 1.6;
       color: #333;
-      max-width: 600px;
+      max-width: 700px;
     }
 
     /* Menu overlay */
@@ -95,21 +109,16 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
+      font-size: 20px;
     }
 
     .menu.open {
       right: 0;
     }
 
-    .menu h2 {
-      margin-bottom: 20px;
-      font-weight: normal;
-    }
-
     .menu a {
       color: black;
       text-decoration: none;
-      font-size: 18px;
     }
 
     /* Army color overlay when menu open */
@@ -169,9 +178,15 @@
 
   <!-- Menu -->
   <div class="menu" id="menu">
-    <h2>Menu</h2>
-    <a href="#">About</a>
-    <a href="#">Projects</a>
+    <a href="#">Artworks</a>
+    <a href="#">Workshops</a>
+    <a href="#">Sound</a>
+    <a href="#">Collabs</a>
+    <div style="height:20px;"></div> <!-- break -->
+    <a href="#">Shop</a>
+    <a href="#">Services</a>
+    <div style="height:20px;"></div> <!-- break -->
+    <a href="#">Biography</a>
     <a href="#">Contact</a>
   </div>
 
@@ -186,9 +201,11 @@
       if (isOpen) {
         menu.classList.remove('open');
         overlay.classList.remove('active');
+        scrollContainer.classList.remove('mosh');
       } else {
         menu.classList.add('open');
         overlay.classList.add('active');
+        scrollContainer.classList.add('mosh'); // apply glitch effect
       }
     }
 
